@@ -1,8 +1,11 @@
 2004-10-30  Andrew Cagney  <cagney@gnu.org>
 
+	* mips-tdep.h (mips_abi_regsize): Declare.
+	* mips-tdep.c (mips_abi_regsize): Make non-static.
+
 	* mips-tdep.c (gdb_print_insn_mips): Simplify.
 	(make_mips16_addr): Delete.
-	
+
 2004-10-30  Mark Kettenis  <kettenis@gnu.org>
 
 	* i386-sol2-nat.c: New file.
